--- a/pages/guide.html
+++ b/pages/guide.html
@@ -121,7 +121,7 @@
                                     <div class="file-icon">📦</div>
                                     <div class="file-info">
                                         <h4>docbao.koplugin_update_pack.zip</h4>
-                                        <p class="file-size">Kích thước: ~2.5 MB</p>
+                                        <p class="file-size">Kích thước: ~2 MB</p>
                                     </div>
                                 </div>
                                 <p class="download-note">Giải nén file thành thư mục: <code>docbao.koplugin</code></p>
@@ -140,11 +140,12 @@
                                     <div class="file-icon">📦</div>
                                     <div class="file-info">
                                         <h4>docbao.koplugin_android_update_pack.zip</h4>
-                                        <p class="file-size">Kích thước: ~2.5 MB</p>
+                                        <p class="file-size">Kích thước: ~2 MB</p>
                                     </div>
                                 </div>
                                 <p class="download-note">Giải nén file thành thư mục: <code>docbao.koplugin</code></p>
-                                <button class="download-btn" onclick="downloadFile('docbao.koplugin_android_update_pack.zip')">
+                                <button class="download-btn" 
+                                        onclick="window.open('https://github.com/Haiminh2023/docbaogrid/raw/main/docbao.koplugin_update_pack.zip', '_blank')">
                                     <span>⬇ Tải xuống</span>
                                 </button>
                             </div>
