--- a/pages/guide.html
+++ b/pages/guide.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+    <!DOCTYPE html>
 <html lang="vi">
 <head>
 <meta charset="UTF-8">
@@ -95,8 +95,8 @@
                                 <div class="requirement-icon">💾</div>
                                 <h3>Dung lượng lưu trữ</h3>
                                 <ul>
-                                    <li>Plugin: ~2 MB</li>
-                                    <li>Cache dữ liệu: ~8 MB</li>
+                                    <li>Plugin: ~1 MB</li>
+                                    <li>Cache dữ liệu: ~9 MB</li>
                                     <li>Tổng cần thiết: ~10 MB</li>
                                 </ul>
                             </div>
@@ -121,11 +121,12 @@
                                     <div class="file-icon">📦</div>
                                     <div class="file-info">
                                         <h4>docbao.koplugin_update_pack.zip</h4>
-                                        <p class="file-size">Kích thước: ~2 MB</p>
+                                        <p class="file-size">Kích thước: ~1 MB</p>
                                     </div>
                                 </div>
                                 <p class="download-note">Giải nén file thành thư mục: <code>docbao.koplugin</code></p>
-                                <button class="download-btn" onclick="downloadFile('docbao.koplugin_update_pack.zip')">
+                                <button class="download-btn" 
+                                        onclick="window.open('https://github.com/Haiminh2023/docbaogrid/raw/main/docbao.koplugin_update_pack.zip', '_blank')">
                                     <span>⬇ Tải xuống</span>
                                 </button>
                             </div>
@@ -140,12 +141,12 @@
                                     <div class="file-icon">📦</div>
                                     <div class="file-info">
                                         <h4>docbao.koplugin_android_update_pack.zip</h4>
-                                        <p class="file-size">Kích thước: ~2 MB</p>
+                                        <p class="file-size">Kích thước: ~1 MB</p>
                                     </div>
                                 </div>
                                 <p class="download-note">Giải nén file thành thư mục: <code>docbao.koplugin</code></p>
                                 <button class="download-btn" 
-                                        onclick="window.open('https://github.com/Haiminh2023/docbaogrid/raw/main/docbao.koplugin_update_pack.zip', '_blank')">
+                                        onclick="window.open('https://github.com/Haiminh2023/docbaogrid/blob/main/docbao.koplugin_android_update_pack.zip', '_blank')">
                                     <span>⬇ Tải xuống</span>
                                 </button>
                             </div>
