--- a/pages/guide.html
+++ b/pages/guide.html
@@ -154,24 +154,39 @@
                         
                         <div class="download-section">
                             <h3>Tải KOReader cho Android</h3>
-                            <p class="device-list">Nếu dùng Android, cần cài KOReader trước</p>
-                            
-                            <div class="koreader-download">
-                                <div class="koreader-info">
-                                    <div class="koreader-icon">📚</div>
-                                    <div class="koreader-details">
-                                        <h4>KOReader for Android</h4>
-                                        <p>Phiên bản mới nhất từ GitHub</p>
+                            <p class="device-list">Nếu dùng máy android cần tài file Koreader APK </p>
+                            <p class="device-list">Với android 32 bit </p>
+                            <div class="download-card">
+                                <div class="download-header">
+                                    <div class="file-icon">📦</div>
+                                    <div class="file-info">
+                                        <h4>koreader-android-arm32bit.apk</h4>
+                                        <p class="file-size">Kích thước: ~30 MB</p>
                                     </div>
                                 </div>
-                                <a href="https://github.com/Haiminh2023/docbaogrid" target="_blank" class="external-link">
-                                    <span>🌐 Truy cập trang tải</span>
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                                        <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path>
-                                        <polyline points="15 3 21 3 21 9"></polyline>
-                                        <line x1="10" y1="14" x2="21" y2="3"></line>
-                                    </svg>
-                                </a>
+                                <p class="download-note">Cài đặt app APK bình thường</p>
+                                <button class="download-btn" 
+                                        onclick="window.open('https://drive.google.com/file/d/1QBp4tZC8rBsjpvYD7O-s5nkqzkbhGhCI/view?usp=sharing', '_blank')">
+                                    <span>⬇ Tải xuống</span>
+                                </button>
+                            </div>
+                        </div>
+
+                        <div class="download-section">
+                            <p class="device-list">Với android 64 bit </p>
+                            <div class="download-card">
+                                <div class="download-header">
+                                    <div class="file-icon">📦</div>
+                                    <div class="file-info">
+                                        <h4>koreader-android-arm64bit.apk</h4>
+                                        <p class="file-size">Kích thước: ~30 MB</p>
+                                    </div>
+                                </div>
+                                <p class="download-note">Cài đặt app APK bình thường</p>
+                                <button class="download-btn" 
+                                        onclick="window.open('https://drive.google.com/file/d/1otQIcOs9oxHowfxTjk9QRTWp8ZNHqOhy/view?usp=sharing', '_blank')">
+                                    <span>⬇ Tải xuống</span>
+                                </button>
                             </div>
                         </div>
                     </div>
