--- a/pages/guide.html
+++ b/pages/guide.html
@@ -158,7 +158,7 @@
                             <p class="device-list">Với android 32 bit </p>
                             <div class="download-card">
                                 <div class="download-header">
-                                    <div class="file-icon">📦</div>
+                                    <div class="file-icon">📱</div>
                                     <div class="file-info">
                                         <h4>koreader-android-arm32bit.apk</h4>
                                         <p class="file-size">Kích thước: ~30 MB</p>
@@ -176,7 +176,7 @@
                             <p class="device-list">Với android 64 bit </p>
                             <div class="download-card">
                                 <div class="download-header">
-                                    <div class="file-icon">📦</div>
+                                    <div class="file-icon">📱</div>
                                     <div class="file-info">
                                         <h4>koreader-android-arm64bit.apk</h4>
                                         <p class="file-size">Kích thước: ~30 MB</p>
@@ -192,11 +192,25 @@
                     </div>
                 </section>
                 
-                <!-- Phần 3: Hướng dẫn cài đặt -->
                 <section id="installation" class="guide-section">
                     <div class="section-header">
                         <h2 class="section-title">🔧 Hướng dẫn cài đặt</h2>
-                        <p class="section-subtitle">Các bước cài đặt chi tiết cho từng thiết bị</p>
+                        <div class="installation-intro">
+                            <div class="download-summary">
+                                <h3>Tóm tắt file cần tải:</h3>
+                                <div class="file-summary">
+                                    <div class="summary-item android">
+                                        <span class="device-badge">Android</span>
+                                        <span class="file-info">2 file: <strong>docbao.koplugin_android_update_pack.zip</strong> và <strong>koreader-android APK</strong></span>
+                                    </div>
+                                    <div class="summary-item other-devices">
+                                        <span class="device-badge">Kobo/Kindle/PocketBook</span>
+                                        <span class="file-info">1 file: <strong>docbao.koplugin_update_pack.zip</strong></span>
+                                    </div>
+                                </div>
+                            </div>
+                            <p class="section-subtitle">Các bước cài đặt chi tiết cho từng thiết bị</p>
+                        </div>
                     </div>
                     
                     <div class="section-content">
