--- a/pages/guide.html
+++ b/pages/guide.html
@@ -226,6 +226,46 @@
                             <div class="step">
                                 <div class="step-number">1</div>
                                 <div class="step-content">
+                                    <h3>Cài đặt file apk</h3>
+                                    <p>Nhấn file APK => Hiện thông báo => Nhấn chi tiết khác => Nhấn tiếp tục cài đặt => nhấn mở => nhấn "OK" => nhấn thanh cấp quyền:</p>
+                                    
+                                    <!-- Slider hình ảnh -->
+                                    <div class="image-slider">
+                                        <div class="slider-container">
+                                            <div class="slider-track">
+                                                <div class="slider-slide">
+                                                    <img src="../images/guide/android-step1-1.jpg" alt="Bước 1: Nhấn file APK">
+                                                    <div class="slide-caption">Bước 1: Nhấn file APK</div>
+                                                </div>
+                                                <div class="slider-slide">
+                                                    <img src="../images/guide/android-step1-2.jpg" alt="Bước 2: Nhấn chi tiết khác">
+                                                    <div class="slide-caption">Bước 2: Nhấn chi tiết khác</div>
+                                                </div>
+                                                <div class="slider-slide">
+                                                    <img src="../images/guide/android-step1-3.jpg" alt="Bước 3: Nhấn tiếp tục cài đặt">
+                                                    <div class="slide-caption">Bước 3: Nhấn tiếp tục cài đặt</div>
+                                                </div>
+                                                <div class="slider-slide">
+                                                    <img src="../images/guide/android-step1-4.jpg" alt="Bước 4: Nhấn mở">
+                                                    <div class="slide-caption">Bước 4: Nhấn mở</div>
+                                                </div>
+                                                <div class="slider-slide">
+                                                    <img src="../images/guide/android-step1-5.jpg" alt="Bước 5: Nhấn OK và cấp quyền">
+                                                    <div class="slide-caption">Bước 5: Nhấn OK và cấp quyền</div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="slider-controls">
+                                            <button class="slider-prev">←</button>
+                                            <div class="slider-dots"></div>
+                                            <button class="slider-next">→</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="step">
+                                <div class="step-number">1</div>
+                                <div class="step-content">
                                     <h3>Copy thư mục plugin</h3>
                                     <p>Copy thư mục <code>docbao.koplugin</code> vào đường dẫn:</p>
                                     <div class="path-box">
