--- a/pages/guide.html
+++ b/pages/guide.html
@@ -251,6 +251,7 @@
                                                 </div>
                                                 <div class="slider-slide">
                                                     <img src="../images/guide/android-step1-5.jpg" alt="Bước 5: Nhấn OK và cấp quyền">
+                                                    <img src="../images/guide/android-step1-5-1.jpg" alt="Bước 5: Nhấn OK và cấp quyền">
                                                     <div class="slide-caption">Bước 5: Nhấn OK và cấp quyền</div>
                                                 </div>
                                             </div>
