--- a/pages/guide.html
+++ b/pages/guide.html
@@ -234,24 +234,24 @@
                                         <div class="slider-container">
                                             <div class="slider-track">
                                                 <div class="slider-slide">
-                                                    <img src="../images/guide/android-step1-1.jpg" alt="Bước 1: Nhấn file APK">
+                                                    <img src="https://haiminh2023.github.io/assets/images/guide/android-step1-1.jpg?v=1.1" alt="androi">
                                                     <div class="slide-caption">Bước 1: Nhấn file APK</div>
                                                 </div>
                                                 <div class="slider-slide">
-                                                    <img src="../images/guide/android-step1-2.jpg" alt="Bước 2: Nhấn chi tiết khác">
+                                                    <img src="https://haiminh2023.github.io/assets/images/guide/android-step1-2.jpg?v=1.1" alt="androi">
                                                     <div class="slide-caption">Bước 2: Nhấn chi tiết khác</div>
                                                 </div>
                                                 <div class="slider-slide">
-                                                    <img src="../images/guide/android-step1-3.jpg" alt="Bước 3: Nhấn tiếp tục cài đặt">
+                                                    <img src="https://haiminh2023.github.io/assets/images/guide/android-step1-3.jpg?v=1.1" alt="androi">
                                                     <div class="slide-caption">Bước 3: Nhấn tiếp tục cài đặt</div>
                                                 </div>
                                                 <div class="slider-slide">
-                                                    <img src="../images/guide/android-step1-4.jpg" alt="Bước 4: Nhấn mở">
+                                                    <img src="https://haiminh2023.github.io/assets/images/guide/android-step1-4.jpg?v=1.1" alt="androi">
                                                     <div class="slide-caption">Bước 4: Nhấn mở</div>
                                                 </div>
                                                 <div class="slider-slide">
-                                                    <img src="../images/guide/android-step1-5.jpg" alt="Bước 5: Nhấn OK và cấp quyền">
-                                                    <img src="../images/guide/android-step1-5-1.jpg" alt="Bước 5: Nhấn OK và cấp quyền">
+                                                    <img src="https://haiminh2023.github.io/assets/images/guide/android-step1-5.jpg?v=1.1" alt="androi">
+                                                    <img src="https://haiminh2023.github.io/assets/images/guide/android-step1-5.jpg?v=1.1" alt="androi">
                                                     <div class="slide-caption">Bước 5: Nhấn OK và cấp quyền</div>
                                                 </div>
                                             </div>
