--- a/pages/guide.html
+++ b/pages/guide.html
@@ -251,8 +251,11 @@
                                                 </div>
                                                 <div class="slider-slide">
                                                     <img src="https://haiminh2023.github.io/assets/images/guide/android-step1-5.jpg?v=1.1" alt="androi">
+                                                    <div class="slide-caption">Bước 5: Nhấn OK</div>
+                                                </div>
+                                                    <div class="slider-slide">
                                                     <img src="https://haiminh2023.github.io/assets/images/guide/android-step1-5-1.jpg?v=1.2" alt="androi">
-                                                    <div class="slide-caption">Bước 5: Nhấn OK và cấp quyền</div>
+                                                    <div class="slide-caption">Bước 6: Cấp quyền và sử dụng</div>
                                                 </div>
                                             </div>
                                         </div>
