--- a/pages/guide.html
+++ b/pages/guide.html
@@ -268,7 +268,7 @@
                                 </div>
                             </div>
                             <div class="step">
-                                <div class="step-number">1</div>
+                                <div class="step-number">2</div>
                                 <div class="step-content">
                                     <h3>Copy thư mục plugin</h3>
                                     <p>Copy thư mục <code>docbao.koplugin</code> vào đường dẫn:</p>
@@ -287,7 +287,7 @@
                             </div>
                             
                             <div class="step">
-                                <div class="step-number">2</div>
+                                <div class="step-number">3</div>
                                 <div class="step-content">
                                     <h3>Khởi động lại KOReader</h3>
                                     <p>Đóng và mở lại ứng dụng KOReader để plugin được nhận diện.</p>
@@ -295,10 +295,10 @@
                             </div>
                             
                             <div class="step">
-                                <div class="step-number">3</div>
+                                <div class="step-number">4</div>
                                 <div class="step-content">
                                     <h3>Kiểm tra cài đặt</h3>
-                                    <p>Trong KOReader, vào <strong>Menu → Công cụ → Quản lý plugin</strong> để xác nhận plugin đã được cài đặt.</p>
+                                    <p>Trong KOReader, vào <strong>Menu → Công cụ </strong> để xác nhận plugin " ❄ Đọc Online"  đã được cài đặt (nếu không thấy vuốt sang trái để sang trang 2 là thấy).</p>
                                 </div>
                             </div>
                         </div>
