--- a/pages/guide.html
+++ b/pages/guide.html
@@ -215,10 +215,10 @@
                     
                     <div class="section-content">
                         <div class="device-tabs">
-                            <button class="device-tab active" data-device="android">Android</button>
-                            <button class="device-tab" data-device="kobo">Kobo</button>
+                            <button class="device-tab active" data-device="kobo">Kobo</button>
                             <button class="device-tab" data-device="kindle">Kindle</button>
                             <button class="device-tab" data-device="pocketbook">PocketBook</button>
+                            <button class="device-tab" data-device="android">Android</button>
                         </div>
                         
                         <!-- Hướng dẫn Android -->
@@ -298,7 +298,7 @@
                                 <div class="step-number">4</div>
                                 <div class="step-content">
                                     <h3>Kiểm tra cài đặt</h3>
-                                    <p>Trong KOReader, vào <strong>Menu → Công cụ </strong> để xác nhận plugin " ❄ Đọc Online"  đã được cài đặt (nếu không thấy vuốt sang trái để sang trang 2 là thấy).</p>
+                                    <p>Trong KOReader, vào <strong>Menu → Công cụ </strong> để xác nhận plugin<strong> " ❄ Đọc Online"</strong>  đã được cài đặt (nếu không thấy vuốt sang trái để sang trang 2 là thấy).</p>
                                 </div>
                             </div>
                         </div>
