--- a/pages/guide.html
+++ b/pages/guide.html
@@ -222,7 +222,7 @@
                         </div>
 
                         <!-- Hướng dẫn Kobo -->
-                        <div class="device-guide" id="guide-kobo">
+                        <div class="device-guide active" id="guide-kobo">
                             <div class="step">
                                 <div class="step-number">1</div>
                                 <div class="step-content">
@@ -308,7 +308,7 @@
                             </div>
                         </div>
                                                 <!-- Hướng dẫn Android -->
-                        <div class="device-guide active" id="guide-android">
+                        <div class="device-guide" id="guide-android">
                             <div class="step">
                                 <div class="step-number">1</div>
                                 <div class="step-content">
