--- a/pages/guide.html
+++ b/pages/guide.html
@@ -223,8 +223,17 @@
 
                         <!-- Hướng dẫn Kobo -->
                         <div class="device-guide active" id="guide-kobo">
-                            <div class="step">
+
+                           <div class="step">
                                 <div class="step-number">1</div>
+                                <div class="step-content">
+                                    <h3>Giải nén file zip: "docbao.koplugin_update_pack.zip". </h3>
+                                    <p>Đổi tên folder thành  "docbao.koplugin" Bên trong folder này chứa các file .lua và các folder liên quan </p>
+                                </div>
+                            </div>
+                            
+                            <div class="step">
+                                <div class="step-number">2</div>
                                 <div class="step-content">
                                     <h3>Kết nối Kobo với máy tính</h3>
                                     <p>Sử dụng cáp USB để kết nối Kobo với máy tính.</p>
@@ -232,7 +241,7 @@
                             </div>
                             
                             <div class="step">
-                                <div class="step-number">2</div>
+                                <div class="step-number">3</div>
                                 <div class="step-content">
                                     <h3>Copy thư mục plugin</h3>
                                     <p>Copy thư mục <code>docbao.koplugin</code> vào đường dẫn:</p>
@@ -246,6 +255,13 @@
                                             Copy
                                         </button>
                                     </div>
+                                </div>
+                            </div>
+                            <div class="step">
+                                <div class="step-number">4</div>
+                                <div class="step-content">
+                                    <h3>Kiểm tra cài đặt</h3>
+                                    <p>Trong KOReader, vào <strong>Menu → Công cụ </strong> để xác nhận plugin<strong> " ❄ Đọc Online"</strong>  đã được cài đặt (nếu không thấy vuốt sang trái để sang trang 2 là thấy).</p>
                                 </div>
                             </div>
                         </div>
