--- a/pages/guide.html
+++ b/pages/guide.html
@@ -284,7 +284,7 @@
                                     <h3>Copy thư mục plugin</h3>
                                     <p>Copy thư mục <code>docbao.koplugin</code> vào đường dẫn:</p>
                                     <div class="path-box">
-                                        <code>.add/koreader/plugins/</code>
+                                        <code>KOBOeReader(E:)\.adds\koreader\plugins</code>
                                         <button class="copy-btn" onclick="copyToClipboard('.add/koreader/plugins/')">
                                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                                                 <rect x="9" y="9" width="13" height="13" rx="2" ry="2"></rect>
