--- a/pages/guide.html
+++ b/pages/guide.html
@@ -229,8 +229,14 @@
                                 <div class="step-content">
                                     <h3>Giải nén file zip: "docbao.koplugin_update_pack.zip". </h3>
                                     <p>Đổi tên folder thành  "docbao.koplugin" Bên trong folder này chứa các file .lua và các folder liên quan </p>
-                                    <p>cấu trúc đúng folder :  <strong>docbao.koplugin/main.lua & stories.lua.... </strong> </p>
-                                    <p>cấu trúc sai folder :  docbao.koplugin/docbao.koplugin/main.lua & stories.lua....  </p>
+                                    <p>cấu trúc đúng folder :</p>
+                                    <div class="path-box">
+                                        <code><strong>docbao.koplugin/main.lua & stories.lua.... </strong></code>
+                                    </div>
+                                    <p>cấu trúc sai folder :</p>
+                                    <div class="path-box">
+                                        <code><strong>docbao.koplugin/docbao.koplugin/main.lua & stories.lua....</strong></code>
+                                    </div>
                                 </div>
                             </div>
                             
