--- a/pages/guide.html
+++ b/pages/guide.html
@@ -229,13 +229,13 @@
                                 <div class="step-content">
                                     <h3>Giải nén file zip: "docbao.koplugin_update_pack.zip". </h3>
                                     <p>Đổi tên folder thành  "docbao.koplugin" Bên trong folder này chứa các file .lua và các folder liên quan </p>
-                                    <p>cấu trúc đúng folder :</p>
+                                    <p>cấu trúc folder đúng :</p>
                                     <div class="path-box">
                                         <code><strong>docbao.koplugin/main.lua & stories.lua.... </strong></code>
                                     </div>
-                                    <p>cấu trúc sai folder :</p>
+                                    <p>cấu trúc folder sai:</p>
                                     <div class="path-box">
-                                        <code><strong>docbao.koplugin/docbao.koplugin/main.lua & stories.lua....</strong></code>
+                                        <code><docbao.koplugin/docbao.koplugin/main.lua & stories.lua....</code>
                                     </div>
                                 </div>
                             </div>
@@ -255,6 +255,9 @@
                                     <p>Copy thư mục <code>docbao.koplugin</code> vào đường dẫn:</p>
                                     <div class="path-box">
                                         <code>KOBOeReader(E:)\.adds\koreader\plugins</code>
+                                    </div>
+                                    <div class="feature-screenshots">
+                                        <img src="https://haiminh2023.github.io/assets/images/guide/copy_plugin.jpg?v=1.5" alt="Copy plugin">
                                     </div>
                                 </div>
                             </div>
