--- a/pages/guide.html
+++ b/pages/guide.html
@@ -235,7 +235,7 @@
                                     </div>
                                     <p>cấu trúc folder sai:</p>
                                     <div class="path-box">
-                                        <code><docbao.koplugin/docbao.koplugin/main.lua & stories.lua....</code>
+                                        <code>docbao.koplugin/docbao.koplugin/main.lua & stories.lua....</code>
                                     </div>
                                 </div>
                             </div>
