--- a/pages/guide.html
+++ b/pages/guide.html
@@ -305,7 +305,7 @@
                                     <h3>Copy thư mục plugin</h3>
                                     <p>Copy thư mục <code>docbao.koplugin</code> vào đường dẫn:</p>
                                     <div class="path-box">
-                                        <code>Kindle\Koreader\plugins</code>
+                                        <code>Kindle(E:)\Koreader\plugins</code>
                                     </div>
                                     <div class="feature-screenshots">
                                         <img src="https://haiminh2023.github.io/assets/images/guide/copy_plugin_kindle.jpg?v=1.5" alt="Copy plugin">
@@ -357,7 +357,7 @@
                                     <h3>Copy thư mục plugin</h3>
                                     <p>Copy thư mục <code>docbao.koplugin</code> vào đường dẫn:</p>
                                     <div class="path-box">
-                                        <code>PocketBook\Koreader\plugins</code>
+                                        <code>PocketBook(E:)\Koreader\plugins</code>
                                     </div>
                                     <div class="feature-screenshots">
                                         <img src="https://haiminh2023.github.io/assets/images/guide/copy_plugin_pocketBook.jpg?v=1.5" alt="Copy plugin">
