--- a/pages/guide.html
+++ b/pages/guide.html
@@ -376,7 +376,7 @@
 
                             </div>
                         </div>
-                                                <!-- Hướng dẫn Android -->
+                        <!-- Hướng dẫn Android -->
                         <div class="device-guide" id="guide-android">
                             <div class="step">
                                 <div class="step-number">1</div>
@@ -437,7 +437,9 @@
                                             Copy
                                         </button>
                                     </div>
-                                    <p class="step-note">Nếu thư mục plugins chưa tồn tại, hãy tạo mới.</p>
+                                    <div class="feature-screenshots">
+                                        <img src="https://haiminh2023.github.io/assets/images/guide/copy_plugin_android.jpg?v=1.6" alt="Copy plugin">
+                                    </div>
                                 </div>
                             </div>
                             
