--- a/pages/guide.html
+++ b/pages/guide.html
@@ -496,7 +496,7 @@
                                 <li>Chọn <strong>"Mở file tiếp theo"</strong> để tự động sang chương kế tiếp</li>
                                 <li>Không cần quay lại danh sách để chọn thủ công</li>
                             </ul>
-                            <p class="note">Cài đặt tự động: <strong>Menu → Cài đặt (bánh răng) → Văn bản → Kết thúc hành động văn bản → Chọn "Mở file tiếp theo"</strong></p>
+                            <p class="note">Cài đặt tự động chuyển chương khu vuốt/ nhấn next : <strong>Menu → Cài đặt (bánh răng) → Văn bản → Kết thúc hành động văn bản → Chọn "Mở file tiếp theo"</strong></p>
                         </div>
                         
                         <!-- Thoát KOReader để copy file -->
