--- a/pages/guide.html
+++ b/pages/guide.html
@@ -513,14 +513,9 @@
                         <!-- Thêm nguồn đọc -->
                         <div class="usage-step">
                             <h3>Thêm nguồn đọc yêu thích</h3>
-                            <p>Chọn <strong>"Nguồn web"</strong> để thêm báo, blog, hoặc website yêu thích.</p>
+                            <p><strong>Đọc báo online => menu (3 gạch) => nguồn websites=> chọn 1 báo=> Nhấn giữ 1 danh mục => hiện popup xác nhận thêm vào danh mục yêu thích => Chọn "Đồng ý"</strong>.</p>
                         </div>
                         
-                        <!-- Đánh dấu yêu thích -->
-                        <div class="usage-step">
-                            <h3>Đánh dấu bài viết yêu thích</h3>
-                            <p>Nhấn giữ vào danh mục hoặc bài viết để thêm vào <strong>mục yêu thích</strong>.</p>
-                        </div>
                     </div>
                 </section>
                 
