--- a/pages/guide.html
+++ b/pages/guide.html
@@ -87,7 +87,14 @@
                                 <div class="requirement-icon">🔧</div>
                                 <h3>Phần mềm yêu cầu</h3>
                                 <ul>
-                                    <li>KOReader phiên bản 2024.01+</li>
+                                    <li>KOReader phiên bản <strong>2024.01 trở lên</strong></li>
+                                    <li class="sub-item">
+                                        <strong>Đối với máy chưa có KOReader:</strong>
+                                        <ul class="nested-list">
+                                            <li>Android: Hướng dẫn cài đặt bên dưới</li>
+                                            <li>Kobo/Kindle/PocketBook: Liên hệ admin để được hỗ trợ cài đặt</li>
+                                        </ul>
+                                    </li>
                                 </ul>
                             </div>
                             
