--- a/pages/guide.html
+++ b/pages/guide.html
@@ -6,8 +6,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="../css/style.css?v=20260415">
-<link rel="stylesheet" href="../css/guide.css?v=20260415">
+<link rel="stylesheet" href="../css/style.css?v=20260416">
+<link rel="stylesheet" href="../css/guide.css?v=20260416">
 </head>
 <body>
 
@@ -88,12 +88,12 @@
                                 <h3>Phần mềm yêu cầu</h3>
                                 <ul>
                                     <li>KOReader phiên bản <strong>2024.01 trở lên</strong></li>
-                                    <li class="sub-item">
+                                    <li>
                                         <strong>Đối với máy chưa có KOReader:</strong>
-                                        <ul class="nested-list">
-                                            <li>Android: Hướng dẫn cài đặt bên dưới</li>
-                                            <li>Kobo/Kindle/PocketBook: Liên hệ admin để được hỗ trợ cài đặt</li>
-                                        </ul>
+                                        <div class="device-requirements">
+                                            <p>• Android: Hướng dẫn cài đặt bên dưới</p>
+                                            <p>• Kobo/Kindle/PocketBook: Liên hệ admin để được hỗ trợ cài đặt</p>
+                                        </div>
                                     </li>
                                 </ul>
                             </div>
