--- a/pages/versions.html
+++ b/pages/versions.html
@@ -186,7 +186,7 @@ document.addEventListener('DOMContentLoaded', function() {
                             
                             <div class="button-spacer"></div>
                             
-                            <a href="features.html#download" class="banner-button download-button">
+                            <a href="guide.html#download" class="banner-button download-button">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                                     <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"/>
                                     <polyline points="7 10 12 15 17 10"/>
