--- a/pages/policies.html
+++ b/pages/policies.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Tuyên bố pháp lý - Đọc Online</title>
+<title>Điều khoản sử dụng - Đọc Online</title>
 
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="../css/style.css?v=20260225">
