--- a/index.html
+++ b/index.html
@@ -5,8 +5,39 @@
 <title>Đọc Online</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
+<!-- ================= SECURITY HEADERS ================= -->
+<meta http-equiv="Content-Security-Policy" content="
+    default-src 'self';
+    script-src 'self';
+    style-src 'self' 'unsafe-inline' https://fonts.googleapis.com;
+    font-src 'self' https://fonts.gstatic.com;
+    img-src 'self' data: https://haiminh2023.github.io;
+    connect-src 'self';
+    frame-ancestors 'self';
+    object-src 'none';
+    base-uri 'self';
+    form-action 'self';
+">
+<meta http-equiv="X-Frame-Options" content="SAMEORIGIN">
+<meta http-equiv="X-Content-Type-Options" content="nosniff">
+<meta http-equiv="Referrer-Policy" content="strict-origin-when-cross-origin">
+<meta name="robots" content="index, follow">
+<!-- ===================================================== -->
+
+<!-- Preconnect for external domains -->
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link rel="preconnect" href="https://haiminh2023.github.io">
+
+<!-- Fonts -->
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
+
+<!-- Styles -->
 <link rel="stylesheet" href="css/style.css?v=20260408">
+
+<!-- Canonical URL -->
+<link rel="canonical" href="https://doc-online.io.vn/">
+
 </head>
 <body>
 
@@ -32,7 +63,13 @@
                     </ul>
                 </div>
                 <div class="feature-image">
-                    <img src="https://haiminh2023.github.io/assets/images/rss_home.jpg?v=1.3" alt="Đọc báo RSS">
+                    <img 
+                        src="https://haiminh2023.github.io/assets/images/rss_home.jpg?v=1.3" 
+                        alt="Đọc báo RSS"
+                        loading="lazy"
+                        width="400"
+                        height="300"
+                    >
                 </div>
             </div>
 
@@ -47,7 +84,13 @@
                     </ul>
                 </div>
                 <div class="feature-image">
-                    <img src="https://haiminh2023.github.io/assets/images/story.jpg?v=1.2" alt="Đọc truyện online">
+                    <img 
+                        src="https://haiminh2023.github.io/assets/images/story.jpg?v=1.2" 
+                        alt="Đọc truyện online"
+                        loading="lazy"
+                        width="400"
+                        height="300"
+                    >
                 </div>
             </div>
 
@@ -62,7 +105,13 @@
                     </ul>
                 </div>
                 <div class="feature-image">
-                    <img src="https://haiminh2023.github.io/assets/images/story_share_4.jpg" alt="Đọc báo RSS">
+                    <img 
+                        src="https://haiminh2023.github.io/assets/images/story_share_4.jpg" 
+                        alt="Kho truyện chia sẻ"
+                        loading="lazy"
+                        width="400"
+                        height="300"
+                    >
                 </div>
             </div>
 
@@ -77,7 +126,13 @@
                     </ul>
                 </div>
                 <div class="feature-image">
-                    <img src="https://haiminh2023.github.io/assets/images/google_drive.jpg" alt="Google Drive">
+                    <img 
+                        src="https://haiminh2023.github.io/assets/images/google_drive.jpg" 
+                        alt="Google Drive"
+                        loading="lazy"
+                        width="400"
+                        height="300"
+                    >
                 </div>
             </div>
 
@@ -91,6 +146,28 @@
 
 <!-- Load include.js -->
 <script src="js/include.js?v=20260220"></script>
+
+<!-- NoScript fallback -->
+<noscript>
+    <div class="noscript-warning">
+        <h3>JavaScript bị tắt</h3>
+        <p>Vui lòng bật JavaScript để sử dụng đầy đủ tính năng của trang web.</p>
+        <a href="/pages/guide.html">Hướng dẫn sử dụng</a>
+    </div>
+    <style>
+    .noscript-warning {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        background: #ff6b6b;
+        color: white;
+        padding: 20px;
+        text-align: center;
+        z-index: 9999;
+    }
+    </style>
+</noscript>
 
 </body>
 </html>
