--- a/error/403.html
+++ b/error/403.html
@@ -1,1 +1,5 @@
-
+<!DOCTYPE html>
+<html>
+<head><title>403 - Truy cập bị từ chối</title></head>
+<body><h1>403 - Truy cập bị từ chối</h1></body>
+</html>
