--- a/pages/features.html
+++ b/pages/features.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="vi">
 <head>
+<!-- Load security.js trước để thêm headers -->
+<script src="../js/security.js?v=20260408"></script>
+    
 <meta charset="UTF-8">
 <title>Tính năng - Đọc Online</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
