--- a/pages/guide.html
+++ b/pages/guide.html
@@ -1,6 +1,8 @@
     <!DOCTYPE html>
 <html lang="vi">
 <head>
+<!-- Load security.js trước để thêm headers -->
+<script src="../js/security.js?v=20260408"></script>
 <meta charset="UTF-8">
 <title>Hướng dẫn cài đặt - Đọc Online</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
