--- a/index.html
+++ b/index.html
@@ -5,24 +5,8 @@
 <title>Đọc Online</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<!-- ================= SECURITY HEADERS ================= -->
-<meta http-equiv="Content-Security-Policy" content="
-    default-src 'self';
-    script-src 'self';
-    style-src 'self' 'unsafe-inline' https://fonts.googleapis.com;
-    font-src 'self' https://fonts.gstatic.com;
-    img-src 'self' data: https://haiminh2023.github.io;
-    connect-src 'self';
-    frame-ancestors 'self';
-    object-src 'none';
-    base-uri 'self';
-    form-action 'self';
-">
-<meta http-equiv="X-Frame-Options" content="SAMEORIGIN">
-<meta http-equiv="X-Content-Type-Options" content="nosniff">
-<meta http-equiv="Referrer-Policy" content="strict-origin-when-cross-origin">
-<meta name="robots" content="index, follow">
-<!-- ===================================================== -->
+<!-- THAY TOÀN BỘ SECURITY HEADERS THỦ CÔNG BẰNG 1 DÒNG NÀY -->
+<script src="js/security.js?v=20260408"></script>
 
 <!-- Preconnect for external domains -->
 <link rel="preconnect" href="https://fonts.googleapis.com">
