--- a/pages/guide.html
+++ b/pages/guide.html
@@ -3,6 +3,8 @@
 <head>
 <!-- Load security.js trước để thêm headers -->
 <script src="../js/security.js?v=20260412"></script>
+<script src="../js/cloudflare-loader.js?v=20260412"></script>
+    
 <meta charset="UTF-8">
 <title>Hướng dẫn cài đặt - Đọc Online</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
