--- a/pages/policies.html
+++ b/pages/policies.html
@@ -3,6 +3,7 @@
 <head>
 <!-- Load security.js trước để thêm headers -->
 <script src="../js/security.js?v=20260412"></script>
+<script src="../js/cloudflare-loader.js?v=20260412"></script>
     
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
