--- a/pages/versions.html
+++ b/pages/versions.html
@@ -3,6 +3,7 @@
 <head>
 <!-- Load security.js trước để thêm headers -->
 <script src="../js/security.js?v=20260412"></script>
+<script src="../js/cloudflare-loader.js?v=20260412"></script>
     
 <meta charset="UTF-8">
 <title>Lịch sử phiên bản - Đọc Online</title>
