--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link rel="preconnect" href="https://haiminh2023.github.io">
 
+<script>
+    if (window.location.hostname !== 'doc-online.io.vn') {
+        window.location.replace('https://doc-online.io.vn');
+    }
+</script>
+    
 <!-- Fonts -->
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
 
