--- a/pages/guide.html
+++ b/pages/guide.html
@@ -744,6 +744,7 @@ document.addEventListener('DOMContentLoaded', function() {
             updateSlider();
         });
     }
+    initImageSliders();
 });
 </script>
 
